# CostCat-Server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doxyfile  settings.gradle.kts
.github/workflows/: static.yml
app/: build.gradle.kts
app/src/main/java/net/nathcat/authcat/: AuthCat.java  AuthResult.java  HttpResponse.java  IHttpProvider.java  SEHttpProvider.java  User.java
app/src/main/java/net/nathcat/authcat/credentials/: CookieSet.java  CredentialSet.java  NamePassSet.java
app/src/main/java/net/nathcat/authcat/exceptions/: InvalidResponse.java
app/src/main/java/net/nathcat/cost/: App.java  Server.java
app/src/main/java/net/nathcat/cost/config/: ServerConfig.java
app/src/main/java/net/nathcat/cost/db/: Transaction.java  User.java  UserBalance.java  Utils.java
app/src/main/java/net/nathcat/cost/handlers/: ApiHandler.java  DetermineBalance.java  EditTransaction.java  GetTransactions.java  LogTransaction.java
app/src/main/java/net/nathcat/logging/: Error.java  ISeverity.java  Info.java  Logger.java  Warning.java
include/costcat/: auth.hpp  costcat.hpp
libs/: CMakeLists.txt
src/: auth.cpp  basic_responses.cpp  db.cpp  get_balances.cpp  get_debts.cpp  json.cpp  log_transaction.cpp  main.cpp  simplify_with_collector.cpp  zero_subset_sum.cpp
